# MeshiPhi

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
cartographi/: __init__.py  cli.py  utils.py
cartographi/config_validation/: config_validator.py  mesh_schema.py
cartographi/dataloaders/: dataloader_interface.py  factory.py
cartographi/dataloaders/lut/: abstract_lut.py  (+6 more)
cartographi/mesh_generation/: aggregated_cellbox.py  boundary.py  cellbox.py  environment_mesh.py  jgrid_aggregated_cellbox.py  jgrid_cellbox.py  mesh.py  mesh_builder.py  neighbour_graph.py
cartographi/mesh_plotting/: mesh_plotter.py
cartographi/mesh_validation/: mesh_validator.py
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: conf.py  index.rst
examples/: README.md
examples/environment_config/: grf_minimal_example.config.json  real_example.config.json
meshiphi/: __init__.py  cli.py  utils.py
meshiphi/config_validation/: config_validator.py  mesh_schema.py
meshiphi/dataloaders/: dataloader_interface.py  factory.py
meshiphi/mesh_generation/: aggregated_cellbox.py  boundary.py  cellbox.py  environment_mesh.py  jgrid_aggregated_cellbox.py  jgrid_cellbox.py  mesh.py  mesh_builder.py  metadata.py  neighbour_graph.py
meshiphi/mesh_plotting/: mesh_plotter.py
meshiphi/mesh_validation/: full_mesh_validator.py  mesh_comparator.py  mesh_validator.py
meshiphi/test_automation/: test_automater.py
tests/: __init__.py  cli.py  merge_test.py  testing_strategy.md
tests/regression_tests/: conftest.py  mesh_test_functions.py  test_mesh.py
tests/unit_tests/: global_mesh.json  test_aggregated_cellbox.py  test_boundary.py  test_cellbox.py  test_cli.py  test_env_mesh.py  test_jgrid.py  test_mesh_builder.py  test_mesh_validator.py  test_neighbour_graph.py  test_scalar_dataloader.py
(+280 files in other folders)
